deployments/f5-ai/moderator/deployment_cai-moderator.yaml
# Source: cai-moderator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cai-moderator
  labels:
    app.kubernetes.io/name: cai-moderator
    app.kubernetes.io/instance: cai-moderator
    app.kubernetes.io/version: v9.133.3.6
  annotations:
    community.f5.com/demo-source: https://github.com/memes/f5-ai-solutions-for-google-cloud
    community.f5.com/email: m.emes@f5.com
    community.f5.com/owner: emes
  namespace: f5-ai-moderator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cai-moderator
      app.kubernetes.io/instance: cai-moderator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cai-moderator
        app.kubernetes.io/instance: cai-moderator
      annotations:
        community.f5.com/demo-source: https://github.com/memes/f5-ai-solutions-for-google-cloud
        community.f5.com/email: m.emes@f5.com
        community.f5.com/owner: emes
    spec:
      imagePullSecrets: []
      serviceAccountName: cai-moderator-sa
      securityContext: {}
      containers:
      - name: cai-moderator
        securityContext: {}
        image: us-docker.pkg.dev/f5-gcs-4138-sales-cloudnext25/ai-demo-oci/harbor.calypsoai.app/calypsoai/cai_moderator:v9.133.3.6
        imagePullPolicy: IfNotPresent
        ports:
        - name: backend
          containerPort: 5500
          protocol: TCP
        - name: auth
          containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: "14"
            memory: 30Gi
          requests:
            cpu: "10"
            memory: 25Gi
        livenessProbe:
          httpGet:
            path: /backend/v1/app/health/infra
            port: backend
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /backend/v1/app/health/infra
            port: backend
          initialDelaySeconds: 5
          periodSeconds: 5
        startupProbe:
          httpGet:
            path: /backend/v1/app/health/infra
            port: backend
          failureThreshold: 24
          periodSeconds: 5
      nodeSelector:
        cloud.google.com/compute-class: Performance
        cloud.google.com/machine-family: c4
      tolerations: []
