deployments/f5-ai/moderator/service_cai-moderator-headless.yaml
# Source: cai-moderator/templates/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cai-moderator-headless
  labels:
    app.kubernetes.io/name: cai-moderator
    app.kubernetes.io/instance: cai-moderator
    app.kubernetes.io/version: v9.133.3.6
  annotations:
    community.f5.com/demo-source: https://github.com/memes/f5-ai-solutions-for-google-cloud
    community.f5.com/email: m.emes@f5.com
    community.f5.com/owner: emes
  namespace: f5-ai-moderator
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: auth
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: cai-moderator
    app.kubernetes.io/instance: cai-moderator
